<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 LiteKite Startup. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">

    <string name="app_name">原住民語輸入法</string>

    <!-- Description for English (US) keyboard subtype [CHAR LIMIT=25]
    (US) should be an abbreviation of the United States to fit in the CHAR LIMIT. -->
    <string name="subtype">原住民語</string>

    <!-- Alternative keys for a. [DO NOT TRANSLATE] -->
    <string name="alternates_for_a">a|ae|</string>
    <!-- Alternative keys for d. [DO NOT TRANSLATE] -->
    <string name="alternates_for_d">d|dh|dj|dr|</string>
    <!-- Alternative keys for e. [DO NOT TRANSLATE] -->
    <string name="alternates_for_e">e|é|</string>
    <!-- Alternative keys for h. [DO NOT TRANSLATE] -->
    <string name="alternates_for_h">h|hl|</string>
    <!-- Alternative keys for i. [DO NOT TRANSLATE] -->
    <string name="alternates_for_i">i|ɨ|</string>
    <!-- Alternative keys for l. [DO NOT TRANSLATE] -->
    <string name="alternates_for_l">l|lh|lj|</string>
    <!-- Alternative keys for n. [DO NOT TRANSLATE] -->
    <string name="alternates_for_n">n|ng|</string>
    <!-- Alternative keys for o. [DO NOT TRANSLATE] -->
    <string name="alternates_for_o">o|oe|</string>
    <!-- Alternative keys for r. [DO NOT TRANSLATE] -->
    <string name="alternates_for_r">r|ṟ|</string>
    <!-- Alternative keys for s. [DO NOT TRANSLATE] -->
    <string name="alternates_for_s">s|sh|</string>
    <!-- Alternative keys for t. [DO NOT TRANSLATE] -->
    <string name="alternates_for_t">t|th|tj|tr|</string>
    <!-- Alternative keys for u. [DO NOT TRANSLATE] -->
    <string name="alternates_for_u">u|ʉ|</string>
    <!-- Alternative keys for symbol. [DO NOT TRANSLATE] -->
    <string name="alternates_for_symbol">ʼ|^|:|</string>


    <string name="Amis">阿美語 (Amis)</string>
    <string name="Atayal">泰雅語 (Atayal)</string>
    <string name="Pinayuanan">排灣語 (Pinayuanan)</string>
    <string name="Bunun">布農語 (Bunun)</string>
    <string name="Pinuyumayan">卑南語 (Pinuyumayan)</string>
    <string name="Drekay">魯凱語 (Drekay)</string>
    <string name="Cou">鄒語 (Cou)</string>
    <string name="SaiSiyat">賽夏語 (SaySiyat)</string>
    <string name="Tao">達悟語 (Tao)</string>
    <string name="Thau">邵語 (Thau)</string>
    <string name="Kevalan">噶瑪蘭語 (Kevalan)</string>
    <string name="Truku">太魯閣語 (Truku)</string>
    <string name="Sakizaya">撒奇萊雅語 (Sakizaya)</string>
    <string name="Seediq">賽德克語 (Seediq)</string>
    <string name="Hlaʼalua">拉阿魯哇語 (Hlaʼalua)</string>
    <string name="Kanakanavu">卡那卡那富語 (Kanakanavu)</string>

</resources>
